Bug 329326 - redraw problem with laptop decoration
Summary: redraw problem with laptop decoration
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 4.11.4
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/114...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-28 16:57 UTC by Daniel Moyne
Modified: 2014-01-29 09:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.6
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
showing missing top border with okular (8.10 KB, image/jpeg)
2013-12-31 17:16 UTC, Daniel Moyne
Details
showing right-left-top-problem with dolphin (18.64 KB, image/jpeg)
2014-01-03 09:16 UTC, Daniel Moyne
Details
kde settings (55.38 KB, image/jpeg)
2014-01-03 09:21 UTC, Daniel Moyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Moyne 2013-12-28 16:57:32 UTC
This problem is not specific of Dolphin, but with Dolphin the borders of the window container on the left and righ are missing. I make them reapear by shrinking or enlarging the window. On another Okular window it is on the top. I tried Qt "native" or "raster" but it is the same.

Reproducible: Always
Comment 1 Christoph Feck 2013-12-28 18:23:06 UTC
Can you add a screen shot to demonstrate the problem?
Comment 2 Daniel Moyne 2013-12-31 17:16:09 UTC
Created attachment 84381 [details]
showing missing top border with okular

This is redraw problem with okular
Comment 3 Christoph Feck 2014-01-01 16:57:56 UTC
Looks like a problem with the decoration you are using. Which one is this?
Comment 4 Thomas Lübking 2014-01-01 17:09:26 UTC
This should affect
a) only the laptop decoration
b) only (semi)maximized windows

please confirm (b) with
     xprop _NET_WM_STATE

(cursor turns into a cross, then just click the window. state is then printed to konsole)

pre-emptive triage.
Comment 5 Daniel Moyne 2014-01-03 09:16:37 UTC
Created attachment 84424 [details]
showing right-left-top-problem with dolphin

this time with dolphin with no border at all
Comment 6 Daniel Moyne 2014-01-03 09:21:01 UTC
Created attachment 84425 [details]
kde settings

Is this what you want to know?
Comment 7 Daniel Moyne 2014-01-03 09:26:48 UTC
Thomas I did what you asked for:
dmoyne@ossau:~$ xprop _NET_WM_STATE
_NET_WM_STATE(ATOM) = 
dmoyne@ossau:~$ xprop _NET_WM_STATE
_NET_WM_STATE(ATOM) = _NET_WM_STATE_MAXIMIZED_VERT, _NET_WM_STATE_MAXIMIZED_HORZ
dmoyne@ossau:~$ 

In the first try I used a correct window. On gthe second try I used a dolphin window with no border at all.

Do you have a fix for this?
Comment 8 Thomas Lübking 2014-01-03 12:53:49 UTC
that's the bug fixed by the linked patch in review, yes.
you'll have to wait for 4.12.1 until it hits downstream - alternatively use oxygen or another window decoration or ask your distro to add that patch downstream or patch and compile the laptop deco yourself.
Comment 9 Thomas Lübking 2014-01-14 21:56:59 UTC
Git commit 35858e739d300660d5e51e1a0af40141608df917 by Thomas Lübking.
Committed on 23/12/2013 at 01:36.
Pushed by luebking into branch 'KDE/4.11'.

fix laptop deco painting

REVIEW: 114511
FIXED-IN: 4.11.6

M  +44   -33   kwin/clients/laptop/laptopclient.cpp

http://commits.kde.org/kde-workspace/35858e739d300660d5e51e1a0af40141608df917