fix laptop deco painting

REVIEW: 114511
BUG: 329326
FIXED-IN: 4.11.6